# Quiz-Back

./: .gitignore  AGENTS.md  pyproject.toml
app/api/v1/: dependencies.py
app/api/v1/routers/: games.py
app/db/: session.py
app/db/models/: games.py  matching_correct_pairs.py  matching_elements.py  players.py  questions.py
app/db/repositories/: games.py  grids.py  matching_correct_pairs.py  matching_elements.py  players.py  themes.py
app/features/games/: schemas.py  services.py
app/features/questions/: schemas.py  services.py
app/features/themes/: schemas.py  services.py
migrations/: migration_add_matching_questions.sql  migration_add_pawns.sql
scripts/: verify_migration.py
